# the-archive

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
docs/blockchain-research/: blockchain-basics.md  blockchain-comparison.md
docs/how-to/: how-to-update-submodules
docs/roadmap/: roadmap.md
hogwarts-lib-rs/: Anchor.toml
hogwarts-lib-rs/app/: env-example.local  package-lock.json  package.json
hogwarts-lib-rs/app/src/app/: globals.css  layout.tsx  page.tsx  utils.ts
hogwarts-lib-rs/app/src/app/bookshelf/: page.tsx
hogwarts-lib-rs/app/src/app/utils/: royalties.ts  utils.ts
hogwarts-lib-rs/app/styles/: globals.css
hogwarts-lib-rs/programs/book-cover/: Cargo.toml
hogwarts-lib-rs/programs/book-cover/src/: lib.rs
hogwarts-lib-rs/programs/book-storage/: Cargo.toml
hogwarts-lib-rs/programs/book-storage/src/: lib.rs
hogwarts-lib-rs/programs/hogwarts-lib-rs/: Cargo.toml
hogwarts-lib-rs/programs/hogwarts-lib-rs/src/: lib.rs
hogwarts-lib-rs/tests/: Cargo.toml
hogwarts-lib-rs/tests/src/: test_initialize.rs
light-writer-rs/: Cargo.toml
light-writer-rs/books-templates/: example_book_data.env  simulated_book_chapter.txt
light-writer-rs/src/: book_types.rs  lib.rs
light-writer-rs/tests/: light-writer-test.rs
powerwand/: Cargo.toml  Makefile.toml  env.example  readme.md
powerwand/src/: lib.rs  main.rs  nft_manager.rs  storage_manager.rs
