[workspace]
members = ["light-writer-rs", "powerwand"]
resolver = "2"

[workspace.dependencies]

# light-writers-rs

regex        = { version = "1.11.1" }
sha2         = { version = "0.10.8" }
chrono       = { version = "0.4.39" }
aes          = { version = "0.7" }
rand         = { version = "0.9.0" }
block-modes  = { version = "0.8" }

# common
serde        = { version = "1.0.217", features = ["derive"]}
serde_json   = { version = "1.0.137" }
dotenv       = { version = "0.15" }
zstd         = { version = "0.13.2" }

# powerwand
anchor-client  = { version = "0.30.1 ", features = ["async"] }
anchor-lang    = { version = "0.30.1"}
solana-sdk     = { version = "2.1.12"}
tokio          = { version = "1.43.0", features = ["full"] }
hex            = { version = "0.4.3"}
anyhow         = { version = "1.0.95"}
