[package]
name = "book-cover"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "book_cover"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
solana-program = "2.2.1"
anchor-lang = "0.30.1"
mpl-token-metadata = { version="5.1.0" }
anchor-spl = "0.30.1"